--- a/ZoomerFit/Base.lproj/LaunchScreen.storyboard
+++ b/ZoomerFit/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launchscreen.png" translatesAutoresizingMaskIntoConstraints="NO" id="3W8-6i-HVH">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launchscreen1.png" translatesAutoresizingMaskIntoConstraints="NO" id="3W8-6i-HVH">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -29,6 +29,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchscreen.png" width="471" height="890"/>
+        <image name="launchscreen1.png" width="471" height="890"/>
     </resources>
 </document>
